docs: refresh CLAUDE.md + READMEs for the monorepo + four-language parity
The docs lagged the repo: CLAUDE.md and the root README still described the old
multi-repo layout (ggcommons-*-lib/, "independent git repositories") with only
Java/Python, CLAUDE.md's quality/doc rules were Rust-only, and several READMEs
omitted the credentials/parameters/streaming subsystems or documented APIs that
never existed.

- CLAUDE.md: rewrite for the single monorepo, four languages at parity, all eight
  subsystems, per-language build/test commands, the single-source schema workflow,
  and a polyglot (not Rust-only) verification/documentation workflow.
- README.md / CONTRIBUTING.md: drop the "independent repos" framing; real libs/,
  cli/, schema/, test-infra/ layout; add TypeScript, credentials/parameters/
  streaming, and the schema drift gate.
- Stale ggcommons-*-lib references fixed in cli/, test-infra/ (+interop), and the
  Java/Python doc/ prose; examples/rust broken lib link fixed.
- libs/python/README.md + doc/architecture.md: remove the hallucinated DI /
  ServiceRegistry / service-interface / ggcommons.init() content (none exists in
  Python) and document the real builder + concrete-service architecture; delete
  doc/dependency-injection.md and doc/migration-guide.md.
- libs/java/README.md: version 1.2.1 -> 1.3.2-SNAPSHOT, builder + new accessors,
  MetricBuilder, examples/java path, Java 25.
- libs/ts: add credentials/parameters/streaming to the README + drop the "spike"
  package.json description.
- Create the missing libs/rust-streamlog/README.md.
- Replace GitLab-boilerplate READMEs (examples/python, templates/python) with real
  content; add README.md to the Python template manifest so its tokens substitute;
  remove dead example.com links from the rust/typescript templates.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Q8K8AcmkWnVXAQpmGpksqB